--- a/account-service/src/main/resources/bootstrap.properties
+++ b/account-service/src/main/resources/bootstrap.properties
@@ -3,4 +3,4 @@ server.port=9020
 spring.cloud.config.uri=http://localhost:9000
 
 
-customer-service.ribbon.listOfServers=http://localhost:9010,http://localhost:9012
+#customer-service.ribbon.listOfServers=http://localhost:9010,http://localhost:9012
